# conch

./: .gitattributes  .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml  security-audit.yml  spell-check.yml  workflow.yml
docs/: architecture.md  config-reference.md  future-considerations.md  predicate-reference.md  provider-design.md
examples/: conch.json  conch.toml  conch.yaml
src/: build.rs  cli.rs  env_name.rs  error.rs  explain.rs  graph.rs  lib.rs  main.rs  predicate.rs  resolve.rs
src/config/: mod.rs  raw.rs
src/ir/: mod.rs
src/provider/: bash.rs  fish.rs  mod.rs  subst.rs
tests/: cli.rs  coverage.rs  default_config.rs  golden.rs
tests/fixtures/configs/: build-fold.toml  cycle.toml  malformed-predicate.toml  no-edges-order.toml  ordered-multi.toml  os-linux-block.toml  path-order.toml  shell-override.toml  simple-single.json  simple-single.toml  simple-single.yaml  structured-source.toml  unordered-conflict.toml
tests/fixtures/golden/: basic.bash  basic.fish  basic.toml  guarded.bash  guarded.fish  guarded.toml
