[package]
name = "conch"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Declarative shell-configuration compiler"
repository = "https://github.com/equals03/conch"
homepage = "https://github.com/equals03/conch"
readme = "README.md"
keywords = ["shell", "fish", "bash"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
hostname = "0.4"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
